# rs-ranking-handler

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: domain.rs  fetch.rs  lib.rs  main.rs  ranking_type.rs  seichi_api.rs  util.rs
src/domain/: ranking_type.rs  seichi_api.rs
