[package]
name = "ranking-handler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
rand = "0.8.4"
strum = { version = "0.22.0", features = ["derive"] }
test-case = "1.2.0"
anyhow = "1.0.44"
