[package]
name = "ranking-handler"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
strum = { version = "0.22", features = ["derive"] }
test-case = "2.0"
anyhow = "1.0"
itertools = "0.10"
